{
  "version": 4,
  "terraform_version": "1.8.2",
  "serial": 359,
  "lineage": "b29894dc-95ca-6bb2-93c1-4359c8363043",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "am1_firewall_http_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-05-14T22:45:33.455-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/armageddon1/global/firewalls/armageddon1-task3-firewall3-duqxle",
            "log_config": [],
            "name": "armageddon1-task3-firewall3-duqxle",
            "network": "https://www.googleapis.com/compute/v1/projects/armageddon1/global/networks/armageddon1-task3-vpc2-duqxle",
            "priority": 1000,
            "project": "armageddon1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/armageddon1/global/firewalls/armageddon1-task3-firewall3-duqxle",
            "source_ranges": [
              "10.0.1.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.am1_network",
            "random_string.rstring"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "am1_firewall_ssh_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-05-14T22:45:22.180-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/armageddon1/global/firewalls/armageddon1-task3-firewall4-duqxle",
            "log_config": [],
            "name": "armageddon1-task3-firewall4-duqxle",
            "network": "https://www.googleapis.com/compute/v1/projects/armageddon1/global/networks/armageddon1-task3-vpc2-duqxle",
            "priority": 1000,
            "project": "armageddon1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/armageddon1/global/firewalls/armageddon1-task3-firewall4-duqxle",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.am1_network",
            "random_string.rstring"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "am2_firewall_http_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-05-14T22:45:22.069-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/armageddon1/global/firewalls/armageddon1-task3-firewall5-duqxle",
            "log_config": [],
            "name": "armageddon1-task3-firewall5-duqxle",
            "network": "https://www.googleapis.com/compute/v1/projects/armageddon1/global/networks/armageddon1-task3-vpc3-duqxle",
            "priority": 1000,
            "project": "armageddon1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/armageddon1/global/firewalls/armageddon1-task3-firewall5-duqxle",
            "source_ranges": [
              "10.0.1.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.am2_network",
            "random_string.rstring"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "am2_firewall_ssh_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-05-14T22:45:21.989-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/armageddon1/global/firewalls/armageddon1-task3-firewall6-duqxle",
            "log_config": [],
            "name": "armageddon1-task3-firewall6-duqxle",
            "network": "https://www.googleapis.com/compute/v1/projects/armageddon1/global/networks/armageddon1-task3-vpc3-duqxle",
            "priority": 1000,
            "project": "armageddon1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/armageddon1/global/firewalls/armageddon1-task3-firewall6-duqxle",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.am2_network",
            "random_string.rstring"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "eu_firewall_http_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-05-14T22:45:21.977-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/armageddon1/global/firewalls/armageddon1-task3-firewall2-duqxle",
            "log_config": [],
            "name": "armageddon1-task3-firewall2-duqxle",
            "network": "https://www.googleapis.com/compute/v1/projects/armageddon1/global/networks/armageddon1-task3-vpc1-duqxle",
            "priority": 1000,
            "project": "armageddon1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/armageddon1/global/firewalls/armageddon1-task3-firewall2-duqxle",
            "source_ranges": [
              "172.16.1.0/24",
              "172.16.2.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.eu_network",
            "random_string.rstring"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "eu_firewall_ping_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2024-05-14T22:45:21.973-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/armageddon1/global/firewalls/armageddon1-task3-firewall1-duqxle",
            "log_config": [],
            "name": "armageddon1-task3-firewall1-duqxle",
            "network": "https://www.googleapis.com/compute/v1/projects/armageddon1/global/networks/armageddon1-task3-vpc1-duqxle",
            "priority": 1000,
            "project": "armageddon1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/armageddon1/global/firewalls/armageddon1-task3-firewall1-duqxle",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.eu_network",
            "random_string.rstring"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "am1_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20240415",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/armageddon1/zones/us-west1-a/disks/armageddon1-task3-instance2-duqxle"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Cascade Lake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/armageddon1/zones/us-west1-a/instances/armageddon1-task3-instance2-duqxle",
            "instance_id": "725679459845927676",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n2-standard-2",
            "metadata_fingerprint": "wW0ppm-J7vc=",
            "name": "armageddon1-task3-instance2-duqxle",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.212.208.176",
                    "network_tier": "STANDARD"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/armageddon1/global/networks/armageddon1-task3-vpc2-duqxle",
                "network_ip": "172.16.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/armageddon1/regions/us-west1/subnetworks/armageddon1-task3-vpc2-subnet-duqxle",
                "subnetwork_project": "armageddon1"
              }
            ],
            "project": "armageddon1",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/armageddon1/zones/us-west1-a/instances/armageddon1-task3-instance2-duqxle",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-west1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "google_compute_network.am1_network",
            "google_compute_subnetwork.am1_subnetwork",
            "random_string.rstring"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "am2_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20240415",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/armageddon1/zones/us-east1-b/disks/armageddon1-task3-instance3-duqxle"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Cascade Lake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/armageddon1/zones/us-east1-b/instances/armageddon1-task3-instance3-duqxle",
            "instance_id": "6450002135263868177",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n2-standard-2",
            "metadata_fingerprint": "wW0ppm-J7vc=",
            "name": "armageddon1-task3-instance3-duqxle",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.211.97.152",
                    "network_tier": "STANDARD"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/armageddon1/global/networks/armageddon1-task3-vpc3-duqxle",
                "network_ip": "172.16.2.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/armageddon1/regions/us-east1/subnetworks/armageddon1-task3-vpc3-subnet-duqxle",
                "subnetwork_project": "armageddon1"
              }
            ],
            "project": "armageddon1",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/armageddon1/zones/us-east1-b/instances/armageddon1-task3-instance3-duqxle",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-east1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "google_compute_network.am2_network",
            "google_compute_subnetwork.am2_subnetwork",
            "random_string.rstring"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "eu_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20240415",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/armageddon1/zones/europe-west1-b/disks/armageddon1-task3-instance1-duqxle"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Cascade Lake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/armageddon1/zones/europe-west1-b/instances/armageddon1-task3-instance1-duqxle",
            "instance_id": "3263714680323568356",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n2-standard-2",
            "metadata_fingerprint": "jU4Pia4eMbs=",
            "metadata_startup_script": "apt update\napt install -y apache2 ",
            "name": "armageddon1-task3-instance1-duqxle",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/armageddon1/global/networks/armageddon1-task3-vpc1-duqxle",
                "network_ip": "10.0.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/armageddon1/regions/europe-west1/subnetworks/armageddon1-task3-vpc1-subnet-duqxle",
                "subnetwork_project": "armageddon1"
              }
            ],
            "project": "armageddon1",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/armageddon1/zones/europe-west1-b/instances/armageddon1-task3-instance1-duqxle",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http-server"
            ],
            "tags_fingerprint": "FYLDgkTKlA4=",
            "zone": "europe-west1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "google_compute_network.eu_network",
            "google_compute_subnetwork.eu_subnetwork",
            "random_string.rstring"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "am1_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/armageddon1/global/networks/armageddon1-task3-vpc2-duqxle",
            "mtu": 0,
            "name": "armageddon1-task3-vpc2-duqxle",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "1571394125707212041",
            "project": "armageddon1",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/armageddon1/global/networks/armageddon1-task3-vpc2-duqxle"
          },
          "dependencies": [
            "random_string.rstring"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "am2_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/armageddon1/global/networks/armageddon1-task3-vpc3-duqxle",
            "mtu": 0,
            "name": "armageddon1-task3-vpc3-duqxle",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "2205305412828919049",
            "project": "armageddon1",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/armageddon1/global/networks/armageddon1-task3-vpc3-duqxle"
          },
          "dependencies": [
            "random_string.rstring"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "eu_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/armageddon1/global/networks/armageddon1-task3-vpc1-duqxle",
            "mtu": 0,
            "name": "armageddon1-task3-vpc1-duqxle",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "23005664710882569",
            "project": "armageddon1",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/armageddon1/global/networks/armageddon1-task3-vpc1-duqxle"
          },
          "dependencies": [
            "random_string.rstring"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "am1_subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-05-14T22:45:34.111-07:00",
            "gateway_address": "172.16.1.1",
            "id": "projects/armageddon1/regions/us-west1/subnetworks/armageddon1-task3-vpc2-subnet-duqxle",
            "ip_cidr_range": "172.16.1.0/24",
            "name": "armageddon1-task3-vpc2-subnet-duqxle",
            "network": "https://www.googleapis.com/compute/v1/projects/armageddon1/global/networks/armageddon1-task3-vpc2-duqxle",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "armageddon1",
            "purpose": "PRIVATE",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/armageddon1/regions/us-west1/subnetworks/armageddon1-task3-vpc2-subnet-duqxle",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.am1_network",
            "random_string.rstring"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "am2_subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-05-14T22:45:22.232-07:00",
            "gateway_address": "172.16.2.1",
            "id": "projects/armageddon1/regions/us-east1/subnetworks/armageddon1-task3-vpc3-subnet-duqxle",
            "ip_cidr_range": "172.16.2.0/24",
            "name": "armageddon1-task3-vpc3-subnet-duqxle",
            "network": "https://www.googleapis.com/compute/v1/projects/armageddon1/global/networks/armageddon1-task3-vpc3-duqxle",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "armageddon1",
            "purpose": "PRIVATE",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/armageddon1/regions/us-east1/subnetworks/armageddon1-task3-vpc3-subnet-duqxle",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.am2_network",
            "random_string.rstring"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "eu_subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-05-14T22:45:23.195-07:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/armageddon1/regions/europe-west1/subnetworks/armageddon1-task3-vpc1-subnet-duqxle",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "armageddon1-task3-vpc1-subnet-duqxle",
            "network": "https://www.googleapis.com/compute/v1/projects/armageddon1/global/networks/armageddon1-task3-vpc1-duqxle",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "armageddon1",
            "purpose": "PRIVATE",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/armageddon1/regions/europe-west1/subnetworks/armageddon1-task3-vpc1-subnet-duqxle",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.eu_network",
            "random_string.rstring"
          ]
        }
      ]
    }
  ]
}